feat(airflow/): add airflow functionality

--- a/airflow/airflow.cfg
+++ b/airflow/airflow.cfg
@@ -44,7 +44,7 @@ hostname_callable = socket:getfqdn
 
 # Default timezone in case supplied date times are naive
 # can be utc (default), system, or any IANA timezone string (e.g. Europe/Amsterdam)
-default_timezone = utc
+default_timezone = America/Los_Angeles
 
 # The executor class that airflow should use. Choices include
 # SequentialExecutor, LocalExecutor, CeleryExecutor, DaskExecutor
@@ -60,7 +60,7 @@ sql_alchemy_pool_enabled = True
 
 # The SqlAlchemy pool size is the maximum number of database connections
 # in the pool. 0 indicates no limit.
-sql_alchemy_pool_size = 5
+sql_alchemy_pool_size = 0
 
 # The SqlAlchemy pool recycle is the number of seconds a connection
 # can be idle in the pool before it is invalidated. This config does
@@ -93,7 +93,7 @@ max_active_runs_per_dag = 16
 # Whether to load the examples that ship with Airflow. It's good to
 # get started, but you probably want to set this to False in a production
 # environment
-load_examples = False
+load_examples = True
 
 # Where your Airflow plugins are stored
 plugins_folder = /usr/local/airflow/plugins
@@ -219,7 +219,7 @@ workers = 4
 
 # The worker class gunicorn should use. Choices include
 # sync (default), eventlet, gevent
-worker_class = sync
+worker_class = eventlet
 
 # Log files for the gunicorn webserver. '-' means log to stderr.
 access_logfile = -
