--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,8 @@ dill==0.3.1.1
 docker==4.1.0
 docopt==0.6.2
 docutils==0.15.2
+elasticsearch==7.1.0
+elasticsearch-dsl==7.1.0
 Flask==1.1.1
 Flask-Admin==1.5.3
 Flask-AppBuilder==1.13.1
