--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,13 +1,13 @@
 version: "3.7"
 services:
-    flask:
-      build: .
-      container_name: securethebox-server
-      environment:
-          - APPENV=PROD
-      ports:
-          - "5000:5000"
-      command: ./venv/bin/python3.7 app.py
+    # flask:
+    #   build: .
+    #   container_name: securethebox-server
+    #   environment:
+    #       - APPENV=PROD
+    #   ports:
+    #       - "5000:5000"
+    #   command: ./venv/bin/python3.7 app.py
     redis:
         image: 'redis:5.0.5'
     postgres:
@@ -49,22 +49,6 @@ services:
             interval: 30s
             timeout: 30s
             retries: 3
-    flower:
-        image: puckel/docker-airflow:1.10.4
-        restart: always
-        depends_on:
-            - redis
-        build:
-          context: https://github.com/puckel/docker-airflow.git
-          dockerfile: Dockerfile
-          args:
-              # - AIRFLOW_DEPS=
-              - PYTHON_DEPS=elasticsearch elasticsearch-dsl
-        environment:
-            - EXECUTOR=Celery
-        ports:
-            - "5555:5555"
-        command: flower
     scheduler:
         image: puckel/docker-airflow:1.10.4
         restart: always
