Removed airflow files

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,93 +1,10 @@
 version: "3.7"
 services:
-    # flask:
-    #   build: .
-    #   container_name: securethebox-server
-    #   environment:
-    #       - APPENV=PROD
-    #   ports:
-    #       - "5000:5000"
-    #   command: ./venv/bin/python3.7 app.py
-    redis:
-        image: 'redis:5.0.5'
-    postgres:
-        image: postgres:9.6
-        environment:
-            - POSTGRES_USER=airflow
-            - POSTGRES_PASSWORD=airflow
-            - POSTGRES_DB=airflow
-            - PGDATA=/var/lib/postgresql/data/pgdata
-        volumes:
-            - ./airflow/pgdata:/var/lib/postgresql/data/pgdata
-
-    webserver:
-        image: puckel/docker-airflow:1.10.4
-        restart: always
-        depends_on:
-            - postgres
-            - redis
-        build:
-          context: https://github.com/puckel/docker-airflow.git
-          dockerfile: Dockerfile
-          args:
-              # - AIRFLOW_DEPS=
-              - PYTHON_DEPS=elasticsearch elasticsearch-dsl
-        environment:
-            - LOAD_EX=y
-            - FERNET_KEY=46BKJoQYlPPOexq0OhDZnIlNepKFf87WFwLbfzqDDho=
-            - EXECUTOR=Celery
-            - POSTGRES_USER=airflow
-            - POSTGRES_PASSWORD=airflow
-            - POSTGRES_DB=airflow
-        volumes:
-            - ./airflow/dags:/usr/local/airflow/dags
-        ports:
-            - "8080:8080"
-        command: webserver
-        healthcheck:
-            test: ["CMD-SHELL", "[ -f /usr/local/airflow/airflow-webserver.pid ]"]
-            interval: 30s
-            timeout: 30s
-            retries: 3
-    scheduler:
-        image: puckel/docker-airflow:1.10.4
-        restart: always
-        depends_on:
-            - webserver
-        build:
-          context: https://github.com/puckel/docker-airflow.git
-          dockerfile: Dockerfile
-          args:
-              # - AIRFLOW_DEPS=
-              - PYTHON_DEPS=elasticsearch elasticsearch-dsl
-        volumes:
-            - ./airflow/dags:/usr/local/airflow/dags
-        environment:
-            - LOAD_EX=y
-            - FERNET_KEY=46BKJoQYlPPOexq0OhDZnIlNepKFf87WFwLbfzqDDho=
-            - EXECUTOR=Celery
-            - POSTGRES_USER=airflow
-            - POSTGRES_PASSWORD=airflow
-            - POSTGRES_DB=airflow
-        command: scheduler
-
-    worker:
-        image: puckel/docker-airflow:1.10.4
-        restart: always
-        depends_on:
-            - scheduler
-        build:
-          context: https://github.com/puckel/docker-airflow.git
-          dockerfile: Dockerfile
-          args:
-              # - AIRFLOW_DEPS=
-              - PYTHON_DEPS=elasticsearch elasticsearch-dsl
-        volumes:
-            - ./airflow/dags:/usr/local/airflow/dags
-        environment:
-            - FERNET_KEY=46BKJoQYlPPOexq0OhDZnIlNepKFf87WFwLbfzqDDho=
-            - EXECUTOR=Celery
-            - POSTGRES_USER=airflow
-            - POSTGRES_PASSWORD=airflow
-            - POSTGRES_DB=airflow
-        command: worker
+    flask:
+      build: .
+      container_name: securethebox-server
+      environment:
+          - APPENV=PROD
+      ports:
+          - "5000:5000"
+      command: ./venv/bin/python3.7 app.py
